# polkadot-mkdocs

./: .gitignore  .urlignore  .vale.ini  404.html  Makefile  Makefile.bat  Parity Polkadot Docs Handover.md  README.md  agent_skills_config.json  agent_tasks_config.json  agent_tasks_skill.md  change_alerts.json  index.html  llms_config.json  mkdocs.yml  polkadot-docs-pages-handover.md  redirects.json  repo_state.json  requirements.txt  robots.txt  sitemap.xml  skill_candidates.json  skill_coverage.json  zero-to-hero-dapp.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-docs.yml  deploy-pages.yml  monitor-skills.yml  vale.yml
LICENSE/: index.html
assets/stylesheets/: extra.css  home.css  index-page.css  polkadot.css  terminal.css
cookie-policy/: index.html
develop/: index.html
develop/application-devs/: index.html
develop/blockchains/: index.html
get-support/: index.html
hooks/: auto_index_table.py  glossary_abbreviations.py
images/: index.html
infrastructure/: index.html
layouts/: polkadot.yml
material-overrides/: 404.html  home.html  index-page.html  main.html  root-subdirectory-page.html  subsection-index-page.html  toggle-page.html
plugins/: pyproject.toml
plugins/copy_md/: plugin.py
policies/: cookie-policy.md  privacy-policy.md  terms-of-use.md
polkadot-protocol/: index.html
privacy-policy/: index.html
scripts/: cookies-consent.js  gen_redirects.py  generate-cookbook-indexes.py  generate_index_pages.py  update_redirects.py
search/: search_index.json
terms-of-use/: index.html
tutorials/: index.html
(+391 files in other folders)
